// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationButton renders 1`] = `
<button
  className="css-1uxa59e css-1efi2jj css-1c4ilrr css-1wf9u1s css-wlhq18"
  dangerouslySetInnerHTML={
    Object {
      "__html": "+",
    }
  }
  onClick={[Function]}
/>
`;

exports[`OperationButton renders a class name 1`] = `
<button
  className="css-1uxa59e css-1efi2jj css-1c4ilrr css-aori8y"
  dangerouslySetInnerHTML={
    Object {
      "__html": "+",
    }
  }
  onClick={[Function]}
/>
`;
